# noema-tiktok-live-bridge

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  SETUP_WINDOWS.md  TIKTOK_CONNECTOR_LIMITATIONS.md  TROUBLESHOOTING.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build-windows.yml  ci.yml  publish-v0.1.7-now.yml  verify-v0.1.7-release.yml
.release-verification/: v0.1.7.json
app/: __init__.py  main.py  pipeline.py  service.py  version.py
app/api/: __init__.py  router.py  schemas.py
app/audio/: __init__.py  devices.py
app/config/: __init__.py  defaults.py  settings.py
app/connectors/: __init__.py  base.py  mock.py  tiktok_live.py
app/events/: __init__.py  bus.py  dedupe.py  models.py  normalizer.py
app/filters/: __init__.py  base.py  chain.py  control_chars.py  cooldown.py  max_length.py  repetition.py  url.py  words.py
app/storage/: __init__.py  envfile.py  history.py  settings.py
app/tts/: __init__.py  base.py  deepgram.py  dummy.py  edge.py  external.py  queue.py  sapi.py
frontend/: app.js  index.html  kitt-header.css  noema-theme.css  noema-ui.js  style.css
packaging/: installer.iss
scripts/: build-portable-runtime.ps1  windows_launcher.py
tests/: conftest.py  test_api.py  test_connection_api.py  test_connector.py  test_dedupe.py  test_deepgram_tts.py  test_edge_tts.py  test_external_tts.py  test_filters.py  test_kitt.py  test_normalizer.py  test_storage.py  test_tiktok_live.py  test_tts.py  test_windows_launcher.py
