[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noema-tiktok-live-bridge"
version = "0.1.10"
description = "Local-first TikTok Live event bridge with filtering and queued TTS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
live = [
    "TikTokLive>=6",
]
windows = [
    "pywin32>=306; platform_system == 'Windows'",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
